exports[`Suite createSchema should create from a complex nested definition 1`] = `
Object {
  "geo": Object {
    "iterable": true,
    "type": [Function],
    "values": Object {
      "coord": Object {
        "default": -1,
        "iterable": false,
        "type": [Function],
      },
      "country": Object {
        "iterable": true,
        "type": [Function],
        "values": Object {
          "id": Object {
            "default": -1,
            "iterable": false,
            "type": [Function],
          },
        },
      },
      "flag": Object {
        "iterable": true,
        "type": [Function],
        "values": Array [
          Object {
            "default": "",
            "iterable": false,
            "type": [Function],
          },
          Object {
            "default": "",
            "iterable": false,
            "type": [Function],
          },
        ],
      },
    },
  },
}
`;

exports[`Suite createSchema should create from a complex non-nested definition 1`] = `
Object {
  "Default": Object {
    "contacts": Array [],
    "geo": Object {},
    "getName": undefined,
    "name": "",
    "year": -1,
  },
  "PropTypes": Object {
    "contacts": [Function],
    "geo": [Function],
    "getName": [Function],
    "name": [Function],
    "year": [Function],
  },
  "transform": [Function],
}
`;

exports[`Suite createSchema should create from a simple nested definition 1`] = `
Object {
  "contact": Object {
    "iterable": true,
    "type": [Function],
    "values": Array [
      Object {
        "default": -1,
        "iterable": false,
        "type": [Function],
      },
      Object {
        "default": -1,
        "iterable": false,
        "type": [Function],
      },
    ],
  },
  "name": Object {
    "default": "",
    "iterable": false,
    "type": [Function],
  },
}
`;

exports[`Suite createSchema should create from a simple non-nested definition 1`] = `
Object {
  "Default": Object {
    "name": "",
    "year": -1,
  },
  "PropTypes": Object {
    "name": [Function],
    "year": [Function],
  },
  "transform": [Function],
}
`;

exports[`Suite parsers should create an schema given an array 1`] = `Array []`;

exports[`Suite parsers should create an schema given an object 1`] = `Object {}`;

exports[`Suite parsers should create the schema default values 1`] = `
Object {
  "arr": Array [
    -1,
    "",
  ],
  "dispatch": undefined,
  "func": undefined,
  "shape": Object {
    "deep": Object {
      "nested": "",
    },
    "id": -1,
    "object": Object {},
  },
  "value": -1,
}
`;

exports[`Suite parsers should create the schema prop types 1`] = `
Object {
  "arr": [Function],
  "dispatch": [Function],
  "func": [Function],
  "shape": [Function],
  "value": [Function],
}
`;

exports[`Suite parsers should create the schema prop types with isRequired 1`] = `
Object {
  "geo": [Function],
  "req": [Function],
}
`;

exports[`Suite parsers should select an strategy for recursivity 1`] = `Object {}`;

exports[`Suite parsers should select an strategy for recursivity 2`] = `Object {}`;

exports[`Suite parsers should transform a definition using mutators 1`] = `
Object {
  "memo": Object {
    "extra": "attribute",
    "memo": Object {},
  },
  "name": "Ada Lovelace",
  "year": 1852,
}
`;

exports[`Suite schema should return a new fulfilled object after transform 1`] = `Object {}`;

exports[`Suite schema should return a new fulfilled object with mutators 1`] = `
Object {
  "memo": Object {
    "extra": "attribute",
    "memo": Object {},
  },
  "year": 1852,
}
`;

exports[`Suite schema should return the PropTypes 1`] = `
Object {
  "arr": [Function],
  "dispatch": [Function],
  "func": [Function],
  "shape": [Function],
  "value": [Function],
}
`;

exports[`Suite schema should return the default values 1`] = `
Object {
  "arr": Array [
    -1,
    "",
  ],
  "dispatch": undefined,
  "func": undefined,
  "shape": Object {
    "deep": Object {
      "nested": "",
    },
    "id": -1,
    "object": Object {},
  },
  "value": -1,
}
`;

exports[`Suite types should allow isRequired extra prop 1`] = `
Object {
  "default": Array [],
  "isRequired": true,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should allow isRequired extra prop 2`] = `
Object {
  "default": true,
  "isRequired": true,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should allow isRequired extra prop 3`] = `
Object {
  "default": undefined,
  "isRequired": true,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should allow isRequired extra prop 4`] = `
Object {
  "default": -1,
  "isRequired": true,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should allow isRequired extra prop 5`] = `
Object {
  "default": Object {},
  "isRequired": true,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should allow isRequired extra prop 6`] = `
Object {
  "default": "",
  "isRequired": true,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should allow isRequired extra prop 7`] = `
Object {
  "default": [Function],
  "isRequired": true,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should allow isRequired extra prop 8`] = `
Object {
  "default": true,
  "isRequired": true,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should allow isRequired extra prop 9`] = `
Object {
  "default": false,
  "isRequired": true,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should allow isRequired extra prop 10`] = `
Object {
  "default": false,
  "isRequired": true,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should allow isRequired extra prop 11`] = `
Object {
  "default": false,
  "isRequired": true,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should allow isRequired extra prop 12`] = `undefined`;

exports[`Suite types should allow isRequired extra prop 13`] = `undefined`;

exports[`Suite types should allow isRequired extra prop 14`] = `undefined`;

exports[`Suite types should allow isRequired extra prop 15`] = `undefined`;

exports[`Suite types should allow isRequired extra prop 16`] = `undefined`;

exports[`Suite types should have exist all the defined types 1`] = `
Object {
  "default": Array [],
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should have exist all the defined types 2`] = `
Object {
  "default": true,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should have exist all the defined types 3`] = `
Object {
  "default": undefined,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should have exist all the defined types 4`] = `
Object {
  "default": -1,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should have exist all the defined types 5`] = `
Object {
  "default": Object {},
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should have exist all the defined types 6`] = `
Object {
  "default": "",
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should have exist all the defined types 7`] = `
Object {
  "default": [Function],
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should have exist all the defined types 8`] = `
Object {
  "default": true,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should have exist all the defined types 9`] = `
Object {
  "default": false,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should have exist all the defined types 10`] = `
Object {
  "default": false,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should have exist all the defined types 11`] = `
Object {
  "default": false,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should have exist all the defined types 12`] = `[Function]`;

exports[`Suite types should have exist all the defined types 13`] = `[Function]`;

exports[`Suite types should have exist all the defined types 14`] = `[Function]`;

exports[`Suite types should have exist all the defined types 15`] = `[Function]`;

exports[`Suite types should have exist all the defined types 16`] = `[Function]`;
